--- a/packages/docs/src/routes/docs/[...1]user-management/[...2]create.md
+++ b/packages/docs/src/routes/docs/[...1]user-management/[...2]create.md
@@ -9,22 +9,22 @@ description: Page description.
 
 Admin user accounts can only be created manually through the Auth0 dashboard. First [create](https://auth0.com/docs/manage-users/user-accounts/create-users) a user, then [apply the admin role](https://auth0.com/docs/manage-users/access-control/configure-core-rbac/rbac-users/assign-roles-to-users#assign-roles-in-user-profile) to that user.
 
-## Client:
+## Client
 
 There are 2 ways to create a user account for a client.
 
-### Automatically through the Aqaratech admin panel (recommended):
+### Automatic (recommended)
 
 1.  Create the client in the [Aqaratech](https://aqaratech.com/new/clients) admin panel. Make sure to enter an email and civil ID.
 2.  Click the `invite` button on the client detail page.
 3.  An invitation email will be sent to the client. The default password will be set to the client's civil ID number.
 
-### Manually through the Auth0 dashboard:
+### Manual
 
 1.  Create the client in the [Aqaratech](https://aqaratech.com/new/clients) admin panel. Make sure to enter an email.
 1.  Take note of the client's `id`, which can be found in the url. For example, if the URL of the client's detail page is `https://aqaratech.com/clients/c313d484-2ed8-417b-bbcf-a7e318b43016`, his `id` is `c313d484-2ed8-417b-bbcf-a7e318b43016`.
 1.  [Create](https://auth0.com/docs/manage-users/user-accounts/create-users) a user account through the Auth0 dashboard and [assign](https://auth0.com/docs/manage-users/access-control/configure-core-rbac/rbac-users/assign-roles-to-users#assign-roles-in-user-profile) it the `property-owner` role.
-1.  Go to the users [Auth0 profile page](https://auth0.com/docs/manage-users/user-accounts/view-user-details#user-details-details-tab), then add the `id` from Step 2 to his `app_metadata` like so:
+1.  Go to the user's [Auth0 profile page](https://auth0.com/docs/manage-users/user-accounts/view-user-details#user-details-details-tab), then add the `id` from Step 2 to the `app_metadata` field like so:
 
 ```json
 {
@@ -36,22 +36,22 @@ There are 2 ways to create a user account for a client.
 If you're having trouble with this, take a look at existing client profiles in Auth0 to see how their `app_metadata` is set.
 :::
 
-## Tenant:
+## Tenant
 
-There are 2 ways to create a user account for a client.
+There are 2 ways to create a user account for a tenant.
 
-### Automatically through the Aqaratech admin panel (recommended):
+### Automatic (recommended)
 
-1.  Create the client in the [Aqaratech](https://aqaratech.com/new/clients) admin panel. Make sure to enter an email and civil ID.
-2.  Click the `invite` button on the client detail page.
-3.  An invitation email will be sent to the client. The default password will be set to the client's civil ID number.
+1.  Create the tenant in the [Aqaratech](https://aqaratech.com/new/tenants) admin panel. Make sure to enter an email and civil ID.
+2.  Click the `invite` button on the tenant detail page.
+3.  An invitation email will be sent to the tenant. The default password will be set to the tenant's civil ID number.
 
-### Manually through the Auth0 dashboard:
+### Manual
 
-1.  Create the client in the [Aqaratech](https://aqaratech.com/new/clients) admin panel. Make sure to enter an email.
-1.  Take note of the client's `id`, which can be found in the url. For example, if the URL of the client's detail page is `https://aqaratech.com/clients/c313d484-2ed8-417b-bbcf-a7e318b43016`, his `id` is `c313d484-2ed8-417b-bbcf-a7e318b43016`.
-1.  [Create](https://auth0.com/docs/manage-users/user-accounts/create-users) a user account through the Auth0 dashboard and [assign](https://auth0.com/docs/manage-users/access-control/configure-core-rbac/rbac-users/assign-roles-to-users#assign-roles-in-user-profile) it the `property-owner` role.
-1.  Go to the users [Auth0 profile page](https://auth0.com/docs/manage-users/user-accounts/view-user-details#user-details-details-tab), then add the `id` from Step 2 to his `app_metadata` like so:
+1.  Create the tenant in the [Aqaratech](https://aqaratech.com/new/tenants) admin panel. Make sure to enter an email.
+1.  Take note of the tenant's `id`, which can be found in the url. For example, if the URL of the tenant's detail page is `https://aqaratech.com/tenants/c313d484-2ed8-417b-bbcf-a7e318b43016`, his `id` is `c313d484-2ed8-417b-bbcf-a7e318b43016`.
+1.  [Create](https://auth0.com/docs/manage-users/user-accounts/create-users) a user account through the Auth0 dashboard and [assign](https://auth0.com/docs/manage-users/access-control/configure-core-rbac/rbac-users/assign-roles-to-users#assign-roles-in-user-profile) it the `tenant` role.
+1.  Go to the user's [Auth0 profile page](https://auth0.com/docs/manage-users/user-accounts/view-user-details#user-details-details-tab), then add the `id` from Step 2 to the `app_metadata` field like so:
 
 ```json
 {
@@ -60,5 +60,5 @@ There are 2 ways to create a user account for a client.
 ```
 
 :::admonition type="tip"
-If you're having trouble with this, take a look at existing client profiles in Auth0 to see how their `app_metadata` is set.
+If you're having trouble with this, take a look at existing tenant profiles in Auth0 to see how their `app_metadata` is set.
 :::
