add copy to fenced block

--- a/packages/docs/src/routes/docs/[...1]user-management/[...2]create.md
+++ b/packages/docs/src/routes/docs/[...1]user-management/[...2]create.md
@@ -26,14 +26,14 @@ There are 2 ways to create a user account for a client.
 1.  [Create](https://auth0.com/docs/manage-users/user-accounts/create-users) a user account through the Auth0 dashboard and [assign](https://auth0.com/docs/manage-users/access-control/configure-core-rbac/rbac-users/assign-roles-to-users#assign-roles-in-user-profile) it the `property-owner` role.
 1.  Go to the user's [Auth0 profile page](https://auth0.com/docs/manage-users/user-accounts/view-user-details#user-details-details-tab), then add the `id` from Step 2 to the `app_metadata` field like so:
 
-```json
+```json copy
 {
 	"idInternal": "c0183a5d-2875-488b-b86f-e1c5628262df"
 }
 ```
 
 :::admonition type="tip"
-If you're having trouble with this, take a look at existing client profiles in Auth0 to see how their `app_metadata` is set.
+If you're having trouble with this, take a look at existing client user profiles in Auth0 to see how their `app_metadata` is set.
 :::
 
 ## Tenant
@@ -53,12 +53,12 @@ There are 2 ways to create a user account for a tenant.
 1.  [Create](https://auth0.com/docs/manage-users/user-accounts/create-users) a user account through the Auth0 dashboard and [assign](https://auth0.com/docs/manage-users/access-control/configure-core-rbac/rbac-users/assign-roles-to-users#assign-roles-in-user-profile) it the `tenant` role.
 1.  Go to the user's [Auth0 profile page](https://auth0.com/docs/manage-users/user-accounts/view-user-details#user-details-details-tab), then add the `id` from Step 2 to the `app_metadata` field like so:
 
-```json
+```json copy
 {
 	"idInternal": "c0183a5d-2875-488b-b86f-e1c5628262df"
 }
 ```
 
 :::admonition type="tip"
-If you're having trouble with this, take a look at existing tenant profiles in Auth0 to see how their `app_metadata` is set.
+If you're having trouble with this, take a look at existing tenant user profiles in Auth0 to see how their `app_metadata` is set.
 :::
