create page description

--- a/packages/docs/src/routes/docs/[...1]user-management/[...2]create.md
+++ b/packages/docs/src/routes/docs/[...1]user-management/[...2]create.md
@@ -1,9 +1,11 @@
 ---
 title: Create
-description: Page description.
+description: This page explains how to create new user accounts.
 ---
 
 # {$frontmatter.title}
+
+{$frontmatter.description}
 
 ## Admin:
 
