--- a/packages/docs/src/routes/docs/[...1]user-management/[...2]create.md
+++ b/packages/docs/src/routes/docs/[...1]user-management/[...2]create.md
@@ -11,20 +11,20 @@ description: This page explains how to create new user accounts.
 
 Admin user accounts can only be created manually through the Auth0 dashboard. First [create](https://auth0.com/docs/manage-users/user-accounts/create-users) a user, then [apply the admin role](https://auth0.com/docs/manage-users/access-control/configure-core-rbac/rbac-users/assign-roles-to-users#assign-roles-in-user-profile) to that user.
 
-## Client
+## Portfolio
 
-There are 2 ways to create a user account for a client.
+There are 2 ways to create a user account for a portfolio.
 
 ### Automatic (recommended)
 
-1.  Create the client in the [Aqaratech](https://aqaratech.com/new/clients) admin panel. Make sure to enter an email and civil ID.
-2.  Click the `invite` button on the client detail page.
-3.  An invitation email will be sent to the client. The default password will be set to the client's civil ID number.
+1.  Create the portfolio in the [Aqaratech](https://aqaratech.com/new/portfolios) admin panel. Make sure to enter an email and civil ID.
+2.  Click the `invite` button on the portfolio detail page.
+3.  An invitation email will be sent to the portfolio. The default password will be set to the portfolio's civil ID number.
 
 ### Manual
 
-1.  Create the client in the [Aqaratech](https://aqaratech.com/new/clients) admin panel. Make sure to enter an email.
-1.  Take note of the client's `id`, which can be found in the url. For example, if the URL of the client's detail page is `https://aqaratech.com/clients/c313d484-2ed8-417b-bbcf-a7e318b43016`, his `id` is `c313d484-2ed8-417b-bbcf-a7e318b43016`.
+1.  Create the portfolio in the [Aqaratech](https://aqaratech.com/new/portfolios) admin panel. Make sure to enter an email.
+1.  Take note of the portfolio's `id`, which can be found in the url. For example, if the URL of the portfolio's detail page is `https://aqaratech.com/portfolios/c313d484-2ed8-417b-bbcf-a7e318b43016`, his `id` is `c313d484-2ed8-417b-bbcf-a7e318b43016`.
 1.  [Create](https://auth0.com/docs/manage-users/user-accounts/create-users) a user account through the Auth0 dashboard and [assign](https://auth0.com/docs/manage-users/access-control/configure-core-rbac/rbac-users/assign-roles-to-users#assign-roles-in-user-profile) it the `property-owner` role.
 1.  Go to the user's [Auth0 profile page](https://auth0.com/docs/manage-users/user-accounts/view-user-details#user-details-details-tab), then add the `id` from Step 2 to the `app_metadata` field like so:
 
@@ -35,7 +35,7 @@ There are 2 ways to create a user account for a client.
 ```
 
 :::admonition type="tip"
-If you're having trouble with this, take a look at existing client user profiles in Auth0 to see how their `app_metadata` is set.
+If you're having trouble with this, take a look at existing portfolio user profiles in Auth0 to see how their `app_metadata` is set.
 :::
 
 ## Tenant
