use client.dev email

--- a/packages/docs/src/routes/docs/[...1]user-management/[...1]types-of-users.md
+++ b/packages/docs/src/routes/docs/[...1]user-management/[...1]types-of-users.md
@@ -10,7 +10,7 @@ description: This section explains how to create user accounts to grant access t
 ## There are 3 types of users:
 
 - Admin
-- Portfolio (aka Property owners or portfolios)
+- Portfolio (aka Property owners)
 - Tenant
 
 <!-- All user accounts can be managed through the [Auth0 dashboard](https://auth0.com). -->
